Revert "Update README.md"
This reverts commit 7bfb8257